tests/invalidTest/other/const_const_unvalid_type64_2.q
# EXPECT type cannot be converted
def void errorType(){
    uint64 a = 18446744073709551616
}

